# aws-iot-fleetwise-edge

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  THIRD-PARTY-LICENSES
.github/template/arch-build/: action.yml
.github/template/docker-build/: action.yml
.github/template/fwe-build/: action.yml
.github/template/release-build/: action.yml
.github/workflows/: ci.yml  release-build.yml  release.yml  update-cfn-ami-ids.yml
docs/dev-guide/: edge-agent-dev-guide.md
interfaces/protobuf/schemas/edgeConfiguration/: staticConfiguration.json
src/: IoTFleetWiseEngine.cpp  IoTFleetWiseEngine.h  MyBlobDataSource.cpp  MyBlobDataSource.h
src/datamanagement/custom/example/externalgps/test/: ExternalGpsSourceTest.cpp
src/datamanagement/datainspection/src/vehicledatasource/: ExternalCANDataSource.cpp
src/datamanagement/datainspection/test/: OBDOverCANModuleTest.cpp
src/offboardconnectivity/implementation/aws/: CMakeLists.txt
src/offboardconnectivity/implementation/aws/bootstrap/: CMakeLists.txt
src/offboardconnectivity/implementation/aws/iotcpp/: CMakeLists.txt
tools/: build-fwe-cross-arm64.sh  build-fwe-cross-armhf.sh  build-fwe-native.sh  configure-fwe.sh  install-deps-cross-arm64.sh  install-deps-cross-armhf.sh  install-deps-native.sh  update-cfn-ami-ids.py
tools/android-app/: README.md
tools/android-app/cloud/: provision.sh  setup-iotfleetwise.sh
tools/cfn-templates/: fwdemo.yml
tools/cloud/: blob-decoders.json  blob-nodes.json  demo.sh  network-interface-blob.json
tools/container/: Dockerfile  README.md  start-fwe.sh
(+8 files in other folders)
